Final ajustments, (Hope so).

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -28,7 +28,7 @@ RUN pip3 install cython
 RUN pip3 install pyyaml packaging scipy matplotlib pycocotools sklearn
 RUN pip3 install Pillow==6.1
 RUN pip3 install tensorboardX
-RUN pip3 install tdqm
+RUN pip3 install tqdm
 RUN pip3 install layered-yaml-attrdict-config
 
 # enables tmux to use mouse
@@ -37,4 +37,4 @@ RUN echo "set -g mouse on" > ~/.tmux.conf
 # enable pdb autocomplete
 RUN  printf "import rlcompleter\nimport pdb\npdb.Pdb.complete = rlcompleter.Completer(locals()).complete" > ~/.pdbrc
 
-WORKDIR "/root/Bosted-OICR/"
+WORKDIR "/root/Boosted-OICR/"
