--- a/configs/baselines/vgg16_voc2007.yaml
+++ b/configs/baselines/vgg16_voc2007.yaml
@@ -3,20 +3,19 @@ TRAIN:
   # Available dataset list: datasets.dataset_catalog.DATASETS.keys()
   # If multiple datasets are listed, the model is trained on their union
   DATASET: 'voc_2007_trainval'
-
   # Scales to use during training
   # Each scale is the pixel size of an image's shortest side
   # If multiple scales are listed, then one is selected uniformly at random for
   # each training image (i.e., scale jitter data augmentation)
   SCALES: [480, 576, 688, 864, 1200]
-  # SCALES: [480]
-  # Max pixel size of the longest side of a scaled input image
-  MAX_SIZE: 2000
 
+
+  # Number of umages between each optmizer update.
   ITERATION_SIZE: 4
 
   # Images *per GPU* in the training minibatch
-  # Total images per minibatch: IMS_PER_BATCH * NUM_GPUS
+  # Total images per minibatch: IMS_PER_BATCH * NUM_GPUS  
+  # Zeni: Legacy, I do not have two gpus ( :( )
   IMS_PER_BATCH: 2
 
   # RoI minibatch size *per image* (number of regions of interest [ROIs])
@@ -35,10 +34,6 @@ TRAIN:
   # DATASETS
   PROPOSAL_FILES: 'data/selective_search_data/voc_2007_trainval.pkl'
 
-  # Snapshot (model checkpoint) period
-  # Divide by NUM_GPUS to determine actual period (e.g., 20000/8 => 2500 iters)
-  # to allow for linear training schedule scaling
-  SNAPSHOT_ITERS: 10000
 
   # Filter proposals that are inside of crowd regions by CROWD_FILTER_THRESH
   # "Inside" is measured as: proposal-with-crowd intersection area divided by
@@ -51,21 +46,9 @@ TRAIN:
   # Freeze the backbone architecture during training if set to True
   FREEZE_CONV_BODY: False
 
-  # The maximum number of proposal clusters
-  MAX_PC_NUM: 5
-
-  # The number of k-means clusters
-  NUM_KMEANS_CLUSTER: 3
-
-  # The IoU threshold to build graph
-  GRAPH_IOU_THRESHOLD: 0.4
-
   FG_THRESH: 0.5
 
   BG_THRESH: 0.1
-
-
-
 
 
 ADAPTATIVE_SUP:
@@ -90,11 +73,6 @@ DATA_LOADER:
 # Inference ('test') options
 # ---------------------------------------------------------------------------- #
 TEST:
-
-  # Datasets to test on
-  # Available dataset list: datasets.dataset_catalog.DATASETS.keys()
-  # If multiple datasets are listed, testing is performed on each one sequentially
-  DATASETS: ()
 
   # Scale to use during testing (can NOT list multiple scales)
   # The scale is the pixel size of an image's shortest side
@@ -311,7 +289,7 @@ FAST_RCNN:
   # The string must match a function this is imported in modeling.model_builder
   # (e.g., 'head_builder.add_roi_2mlp_head' to specify a two hidden layer MLP)
   ROI_BOX_HEAD: vgg16.roi_2mlp_head
-  MIN_PROPOSAL_SIZE: 5
+  MIN_PROPOSAL_SIZE: 2
   TOP_K: -1
   # Hidden layer dimension when using an MLP for the RoI box head
   MLP_HEAD_DIM: 4096
@@ -394,34 +372,8 @@ EPS: 1e-14
 OUTPUT_DIR: 'Outputs'
 
 # Name (or path to) the matlab executable
-MATLAB: 'octave'
+MATLAB: 'octave'  # a
 
-# Dump detection visualizations
-VIS: False
-
-# Score threshold for visualization
-VIS_TH: 0.9
-
-# Expected results should take the form of a list of expectations, each
-# specified by four elements (dataset, task, metric, expected value). For
-# example: [['coco_2014_minival', 'box_proposal', 'AR@1000', 0.387]]
-EXPECTED_RESULTS: []
-# Absolute and relative tolerance to use when comparing to EXPECTED_RESULTS
-EXPECTED_RESULTS_RTOL: 0.1
-EXPECTED_RESULTS_ATOL: 0.005
-# Set to send email in case of an EXPECTED_RESULTS failure
-EXPECTED_RESULTS_EMAIL: ''
-
-# ------------------------------
-# Data directory
-# DATA_DIR: osp.abspath(osp.join(ROOT_DIR, 'data'))
-
-# [Deprecate]
-POOLING_MODE: 'crop'
-
-# [Deprecate] Size of the pooled region after RoI pooling
-POOLING_SIZE: 7
-CROP_RESIZE_WITH_MAX_POOL: True
 CUDA: True
 DEBUG: False
 START_STEP: 0
