--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,4 +1,4 @@
-FROM nvidia/cuda:10.0-cudnn7-devel-ubuntu18.04
+FROM nvidia/cuda:10.2-cudnn7-devel-ubuntu18.04
 
 ENV DEBIAN_FRONTEND noninteractive
 
@@ -22,14 +22,10 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
          wget\
          && rm -rf /var/lib/apt/lists/*
 
-RUN pip3 install torch==1.2.0 torchvision==0.4.0 -f https://download.pytorch.org/whl/torch_stable.html
-RUN pip3 install opencv-python
-RUN pip3 install cython
-RUN pip3 install pyyaml packaging scipy matplotlib pycocotools sklearn
-RUN pip3 install Pillow==6.1
-RUN pip3 install tensorboardX
+RUN pip3 install torch==1.6.0 torchvision==0.7.0 -f https://download.pytorch.org/whl/torch_stable.html
+RUN pip3 install opencv-python==4.2.0.34
 RUN pip3 install tqdm
-RUN pip3 install layered-yaml-attrdict-config
+RUN pip3 install layered-yaml-attrdict-config 
 
 # enables tmux to use mouse
 RUN echo "set -g mouse on" > ~/.tmux.conf
